# one-keyboard

crates/server/: Cargo.toml
crates/server/src/: main.rs
crates/virtual_keyboard/: Cargo.toml
crates/virtual_keyboard/src/: lib.rs  linux.rs  utils.rs
